--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
     "request": "^2.88.2"
+  },
+  "engines": {
+    "node": "12.16.2"
   }
 }
